[gd_scene load_steps=6 format=2]

[ext_resource path="res://Hexes/Basic_Hex.png" type="Texture" id=1]
[ext_resource path="res://Hexes/Scripts/Hex.gd" type="Script" id=2]
[ext_resource path="res://Hexes/HexArea.gd" type="Script" id=3]
[ext_resource path="res://Hexes/sea_tile.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Hex" type="Node2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="HeightSensitive" type="Node2D" parent="."]

[node name="Graphics" type="Node2D" parent="HeightSensitive"]
position = Vector2( 0, 25.5 )

[node name="Hex" type="AnimatedSprite" parent="HeightSensitive/Graphics"]
light_mask = 32
frames = SubResource( 1 )
frame = 1

[node name="Building" type="Sprite" parent="HeightSensitive/Graphics"]
position = Vector2( 0, -45 )
z_index = 1

[node name="HexArea" type="Area2D" parent="HeightSensitive"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionHex" type="CollisionPolygon2D" parent="HeightSensitive/HexArea"]

[node name="Colorhex" type="Polygon2D" parent="HeightSensitive/HexArea"]
color = Color( 1, 1, 1, 0 )

[node name="SelectionPolys" type="Node2D" parent="HeightSensitive"]
visible = false

[node name="Selectionhex0" type="Polygon2D" parent="HeightSensitive/SelectionPolys"]
color = Color( 0.956863, 0.905882, 0.101961, 0.803922 )

[node name="Selectionhex1" type="Polygon2D" parent="HeightSensitive/SelectionPolys"]
color = Color( 0.956863, 0.905882, 0.101961, 0.803922 )

[node name="Selectionhex2" type="Polygon2D" parent="HeightSensitive/SelectionPolys"]
color = Color( 0.956863, 0.905882, 0.101961, 0.803922 )

[node name="Selectionhex3" type="Polygon2D" parent="HeightSensitive/SelectionPolys"]
color = Color( 0.956863, 0.905882, 0.101961, 0.803922 )

[node name="Selectionhex4" type="Polygon2D" parent="HeightSensitive/SelectionPolys"]
color = Color( 0.956863, 0.905882, 0.101961, 0.803922 )

[node name="Selectionhex5" type="Polygon2D" parent="HeightSensitive/SelectionPolys"]
color = Color( 0.956863, 0.905882, 0.101961, 0.803922 )
